--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'squidgames'; /* Choose a name to reference the font */
+    src: url('Game\ Of\ Squids.ttf'); /* Path to your font file */
+}
 body.squid-theme {
     font-family: 'Arial', sans-serif;
     background: #1b1b1b;
@@ -60,6 +64,7 @@ body.squid-theme::before {
 }
 
 h2 {
+    font-family: 'squidgames';
     margin-bottom: 25px;
     font-size: 28px;
     color: #e60073;
@@ -68,6 +73,7 @@ h2 {
 }
 
 form {
+    font-family: 'squidgames';
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,6 +87,7 @@ label {
 }
 
 input {
+    font-family: 'squidgames';
     margin-top: 5px;
     padding: 10px;
     border: 2px solid #444;
@@ -92,12 +99,14 @@ input {
 }
 
 input:focus {
+    
     outline: none;
     border-color: #e60073;
     box-shadow: 0 0 8px #e60073;
 }
 
 .btn-pink {
+    font-family: 'squidgames';
     margin-top: 20px;
     padding: 12px;
     background-color: #e60073;
@@ -132,6 +141,7 @@ input:focus {
 }
 
 p {
+    font-family: 'squidgames';
     font-size: 14px;
     color: #d4d4d4;
 }
@@ -142,6 +152,7 @@ input::placeholder {
 }
 
 button:active {
+    
     transform: translateY(3px);
     box-shadow: none;
 }
